assets/css/custom-styles.css
/** "Regular" screens **/
@media (min-aspect-ratio: 1.3) and (max-aspect-ratio: 2.2) {
    .logo {
        --size: 150%;
    }
    .top-label {
        --size: 4vw;
    }
    .home-links {
        --pad: 10%;
        grid-template-columns: repeat(6, 1fr);
        grid-template-rows: repeat(1, 1fr);
        font-size: 15vh;
    }
}
/** Vertical screens **/
@media (min-aspect-ratio: 0) and (max-aspect-ratio: 0.8) {
    .logo {
        --size: 320%;
    }
    .top-label {
        --size: 10vw;
    }
    .home-links {
        --pad: 0;
        grid-template-columns: repeat(3, 1fr);
        grid-template-rows: repeat(2, 1fr);
        font-size: 12vh;
        padding-top: 5vh;
        padding-bottom: 5vh;
    }
}
/** Square and 4:3 screens **/
@media (min-aspect-ratio: 0.8) and (max-aspect-ratio: 1.3) {
    .logo {
        --size: 200%;
    }
    .top-label {
        --size: 8vw;
    }
    .home-links {
        --pad: 10%;
        grid-template-columns: repeat(3, 1fr);
        grid-template-rows: repeat(2, 1fr);
        font-size: max(10vw, 11vh);
    }
}
/** Wide screens **/
@media (min-aspect-ratio: 2.2) {
    .logo {
        --size: 100%;
    }
    .top-label {
        --size: 2.5vw;
    }
    .home-links {
        --pad: 20%;
        grid-template-columns: repeat(6, 1fr);
        grid-template-rows: repeat(1, 1fr);
        font-size: 15vh;
    }
}

@keyframes glow-size {
    from {
        text-shadow: 0 0 0.25em var(--glow-color);
    }
    50% {
        text-shadow: 0 0 0.10em var(--glow-color);
    }
    to {
        text-shadow: 0 0 0.25em var(--glow-color);
    }
}

body {
    background: #282828;
    overflow-x: hidden;
    overflow-y: hidden;
    margin: 0px;
    padding: 0px;
}

.logo {
    position: relative;
    top: 0px;
    width: var(--size);
    left: calc(50% - (var(--size)/2));
}

.fa-inverse {
    color: #202020;
}

#nav-search-input:focus {
    box-shadow: none;
}

#root {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: max-content auto 1fr;
    height: 100vh;
}

code {
    color: #fff;
}

pre {
    border-radius: 0;
}

.box-note,
.box-warning,
.box-error
 {
    color: #161616;
}

.pagination .page-item .page-link {
    background-color: #202020;
}

.pagination .page-item .page-link:hover {
    color: #202020;
}

table {
    color: #161616;
}

.post-preview .post-meta,
.post-heading .post-meta {
    color: gainsboro;
}

.top-label {
    background: #161616;
    margin: 0;
    padding: 1rem;
    font-size: var(--size);
    color: whitesmoke;
    text-align: center;
    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: 600;
    animation: glow-size infinite 6s linear;
    --glow-color: white;
}

.home-links {
    filter: drop-shadow(5px 5px 0px #171717);
    width: 100%;
    text-align: center;
    display: grid;
    padding-left: var(--pad);
    padding-right: var(--pad);
    position: relative;
    top: -3vh;
}

.home-links li {
    display: flex;
    align-items: center;
}

.home-links li a {
    width: 100%;
    text-align: center;
}

.home-links-wrapper {
    display: flex;
    align-items: center;
}

.home-links .fab,
.home-links .fas {
    color: whitesmoke;
    transition: transform .2s;
    transition-timing-function: cubic-bezier(0.39, 0.9, 0.97, 2);
}

.home-links .fab:hover,
.home-links .fas:hover
{
    transform: scale(1.1);
}

.fa-youtube:hover {
    color: #FF0000;
}

.fa-discord:hover {
    color: #5865F2;
}

.fa-github:hover {
    color: #6E5494;
}

.fa-twitter:hover {
    color: #1DA1F2;
}

.fa-patreon:hover {
    color: #FF424D;
}

.fa-envelope:hover {
    color: #d2b646;
}

